# test-remote-mcp-server

./: .gitignore  PUSH_TO_GITHUB.bat  README.md  proxy.py  pyproject.toml
mcp-client-app/: .env.example  .gitignore  README.md  client1.py  client2.py  main.py  manim_test_scene.py  pyproject.toml  run_app.bat  test_tools.py
