[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-remote-server"
version = "0.1.0"
description = "FastMCP-based remote server for managing expenses with category support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastmcp>=2.12.4",
]

[tool.setuptools]
py-modules = ["main", "proxy"]
