[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-openai>=1.0.2",
    "manim>=0.20.1",
    "mcp>=1.21.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
